--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^1.7.9",
-    "remote": "^0.2.6"
+    "remote": "^0.2.6",
+    "request": "^2.83.0"
   }
 }
